
syntax = "proto3";

package data;

// compatible with wsgrpc v1 protocal
message DataFrame {
  message Headers {
    string path = 1;
    string status = 2;
    string rpc_status = 3;
    string rpc_message = 4;
  }
  message Trailers {
    string path = 1;
    string status = 2;
    string rpc_status = 3;
    string rpc_message = 4;
  }
  enum Types {
    HEADERS = 1;
    TRAILERS = 2;
    MESSAGE = 3;
  }

  required int32 stream_id = 1;
  required bool end_stream = 2;
  required Types type = 3;
  Headers headers = 4;
  Trailers trailers = 5;
  bytes message = 6;
}
